# wireguard-gui

./: .gitignore  BUGS_FIXED_SUMMARY.md  BUGS_FOUND.md  BUILD_AND_INSTALL.sh  CHANGELOG.md  CONTRIBUTING_GUIDE.md  CONTRIBUTION_SUMMARY.md  END_TO_END_TEST.sh  FIRST_PR_GUIDE.md  PREPARE_CONTRIBUTIONS.sh  PR_DESCRIPTION_CSS.md  PR_DESCRIPTION_SNAP.md  README.md  TEST_FIXES.md  components.json  create-client-manual.sh  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  wdio.conf.ts
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  draft_stable.yml  draft_stable_arm.yml  e2e.yml  eslint_clippy.yml
app/: globals.css  layout.tsx  page.tsx
components/: app-loader.tsx  app-splash-screen.tsx  profile-dialog-delete.tsx  profile-dialog-form.tsx  profile-form.tsx  profile-table.tsx  security-controls.tsx
components/ui/: data-table.tsx  dialog.tsx  sidebar.tsx
e2e/: tsconfig.json
e2e/.home/.cache/: event-sound-cache.tdb.935e85972f174fb28242fb7dcd9c5b65.x86_64-pc-linux-gnu
e2e/.home/.config/pulse/: cookie
e2e/.home/1783174753648/.cache/: event-sound-cache.tdb.935e85972f174fb28242fb7dcd9c5b65.x86_64-pc-linux-gnu
e2e/.home/1783174753648/.config/pulse/: cookie
e2e/.home/1783174976656/.cache/: event-sound-cache.tdb.935e85972f174fb28242fb7dcd9c5b65.x86_64-pc-linux-gnu
e2e/.home/1783175171643/.cache/: event-sound-cache.tdb.935e85972f174fb28242fb7dcd9c5b65.x86_64-pc-linux-gnu
e2e/specs/: security-flow.spec.ts
lib/: effects.ts
nix/: wireguard-gui.nix
snap/: snapcraft.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/scripts/: wg.sh
src-tauri/src/: main.rs  security.rs
types/: app.ts  profile.ts
(+95 files in other folders)
