[package]
name = "wireguard-gui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.139"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["image-png", "tray-icon"] }
tauri-plugin-window-state = "2"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["v110", "vendored"] }
tauri-plugin-dialog = "2"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
base64 = "0.22"
rand = "0.9"
tauri-plugin-wdio = "1.2.0"
tauri-plugin-wdio-webdriver = "1.2.0"

[features]
dev = []
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
